LIPS-230  [Client Need] -Avoid tag page - Centered aligned

--- a/src/assets/sass/custom/_devp.scss
+++ b/src/assets/sass/custom/_devp.scss
@@ -578,3 +578,6 @@ input.input_modify {
     padding: 0;
   }
 }
+.commonSearchList {
+	z-index: 999;
+}
